docs: fixed broken links

--- a/docs/user-guides/5.38.x/file-manager/essentials/bulk-actions.mdx
+++ b/docs/user-guides/5.38.x/file-manager/essentials/bulk-actions.mdx
@@ -28,13 +28,13 @@ To follow this tutorial, you need the **Men's Red Tshirt** and **Men's Black Tsh
 
 2. In the root folder, create a folder titled **Tshirts**.
 
-    **Note**: If you are not familiar with how to create a folder, please follow the [Organizing Files](../file-manager/organizing-files) tutorial.
+    **Note**: If you are not familiar with how to create a folder, please follow the [Organizing Files](/docs/{version}/user-guides/file-manager/essentials/organizing-files) tutorial.
 
-3. In the root folder, over the **Men's Red Tshirt** image we uploaded in the [File Upload](../file-manager/upload-file) tutorial, click the **SELECT** icon (☑️).
+3. In the root folder, over the **Men's Red Tshirt** image we uploaded in the [File Upload](/docs/{version}/user-guides/file-manager/essentials/upload-file) tutorial, click the **SELECT** icon (☑️).
 
     ✔️ A file action bar appears below the search bar.
 
-4. Similarly, select the **Men's Black Tshirt** image we uploaded in the [Tagging Files](../file-manager/tagging-files) tutorial.
+4. Similarly, select the **Men's Black Tshirt** image we uploaded in the [Tagging Files](/docs/{version}/user-guides/file-manager/essentials/tagging-files) tutorial.
 
 ![Bulk Actions](./assets/bulk-actions/selected-files.png)
 
