docs: added the video for tagging files user guide

--- a/docs/user-guides/5.38.x/file-manager/essentials/tagging-files.mdx
+++ b/docs/user-guides/5.38.x/file-manager/essentials/tagging-files.mdx
@@ -5,6 +5,7 @@ description: Learn how to tag a file and filter it through the tag in File Manag
 ---
 
 import { Alert } from "@/components/Alert";
+import taggingFilesVideo from "./assets/tagging-files/tagging-files.mp4";
 
 <Alert type="success" title="WHAT YOU'LL LEARN">
 
@@ -22,6 +23,7 @@ Webiny allows users to tag files, facilitating convenient access. Users can effi
 
 To follow this tutorial, you need the **Men's Red Tshirt** image uploaded in the file manager. If you don’t have the **Men's Red Tshirt** image in your file manager, please follow the [File Upload](/docs/{version}/user-guides/file-manager/essentials/upload-file) tutorial to upload it.
 
+<Video src={taggingFilesVideo} controls={true}/>
 
 ## Step 1: Tag a file
 
