--- a/docs/release-notes/5.38.3/changelog.mdx
+++ b/docs/release-notes/5.38.3/changelog.mdx
@@ -10,6 +10,6 @@ description: See what's new in Webiny version 5.38.3.
 
 ### Globally Installed Pulumi CLI No Longer Causes Issues When Deploying ([#3793](https://github.com/webiny/webiny-js/pull/3793))
 
-Previously, if a user already had Pulumi CLI installed on their machine, and then tried to deploy their Webiny project, in some cases the deployment would fail. Essentially, the issue was that the globally installed Pulumi CLI was used instead of the one that was installed locally in the project. 
+Previously, if a user already had Pulumi CLI installed on their machine, and then tried to deploy their Webiny project, in some cases the deployment would fail. Essentially, the issue was that the globally installed Pulumi CLI would conflict with the one that is installed locally in the project.
 
-This has been fixed, and now the locally installed Pulumi CLI will always be used.
+This has been fixed. Now, if a user has Pulumi CLI installed globally, it will not cause any issues when deploying your Webiny project.
