docs: add bulk edit paragraph

--- a/docs/release-notes/5.38.3/changelog.mdx
+++ b/docs/release-notes/5.38.3/changelog.mdx
@@ -6,6 +6,14 @@ description: See what's new in Webiny version 5.38.3.
 
 <GithubRelease version={"5.38.3"} />
 
+## File Manager
+
+### Fix Append Operation Via The Bulk Edit Feature ([#3777](https://github.com/webiny/webiny-js/pull/3777))
+
+We have successfully resolved an issue that users were facing when trying to append new values to a field without existing data using the File Manager's Bulk Edit feature.
+
+With this release, the identified issue has been addressed. Users can confidently append new data without experiencing any errors.
+
 ## Deployments
 
 ### Globally Installed Pulumi CLI No Longer Causes Issues When Deploying ([#3793](https://github.com/webiny/webiny-js/pull/3793))
