docs: add bulk edit dialog closure paragraph

--- a/docs/release-notes/5.38.3/changelog.mdx
+++ b/docs/release-notes/5.38.3/changelog.mdx
@@ -14,6 +14,10 @@ We have successfully resolved an issue that users were facing when trying to app
 
 With this release, the identified issue has been addressed. Users can confidently append new data without experiencing any errors.
 
+### Preventing Accidental Closure in Bulk Edit Dialog  ([#3790](https://github.com/webiny/webiny-js/pull/3790))
+
+With this release, we are preventing the user from accidentally closing the “Bulk Edit” dialog by disabling the default behaviour of closing the dialog when clicking on the scrim.
+
 ## Deployments
 
 ### Globally Installed Pulumi CLI No Longer Causes Issues When Deploying ([#3793](https://github.com/webiny/webiny-js/pull/3793))
