docs: fixed a typo

--- a/docs/developer-docs/5.34.x/core-development-concepts/development/local-development.mdx
+++ b/docs/developer-docs/5.34.x/core-development-concepts/development/local-development.mdx
@@ -29,7 +29,7 @@ For detailed information, please refer to the [`watch command`](/docs/core-devel
 
 Now let's learn more about local development with the frequently asked questions related to Webiny development.
 
-## Is it possible to perform local development in Webniy without deploying any changes to the cloud?
+## Is it possible to perform local development in Webiny without deploying any changes to the cloud?
 
 As previously mentioned, for the API and infrastructure related portion of the development, deployment to the cloud is necessary as it is powered by various serverless services such as AWS Lambda, DynamoDB, API Gateway, etc. However, for frontend development, it is possible to develop and test locally and only deploy to the cloud once everything is looking good.
 
