wip: create 5.38.3 release notes

--- a/docs/release-notes/5.39.0/changelog.mdx
+++ b/docs/release-notes/5.39.0/changelog.mdx
@@ -29,41 +29,15 @@ On top of that, searching for entries and sorting based on the date/time or iden
 
 In order to tackle these issues, with this release, we're revamping the date/time and identity-related meta fields. In total, we're introducing 20 new meta fields, where 10 are revision-specific, and 10 are entry-specific.
 
+For example, users can now use the `revisionCreatedOn` meta field to display the date/time when a revision was initially created. And they can use the `entryCreatedOn` meta field to display the date/time when an entry was initially created.
+
+For the full list of new meta fields and additional information, please refer to the new [Meta Fields](/docs/tutorials/headless-cms/meta-fields) article.
+
+#### A Note On Backwards Compatibility
+
+Because we're introducing new meta fields, we're also deprecating the old ones. This means that, with this release, the old meta fields will still work, but they will be removed in one of the future releases. For more information, please refer to the dedicated [Backwards Compatibility](/docs/tutorials/headless-cms/meta-fields#backwards-compatibility) section in the new Meta Fields article.
 
 
-**Revision-level Meta Fields**
-
-| Field                      | Description                                   | May be empty |
-| -------------------------- | --------------------------------------------- | ------------ |
-| `revisionCreatedOn`        | When was the revision initially created.      | No           |
-| `revisionSavedOn`          | When was the revision last saved.             | No           |
-| `revisionModifiedOn`       | When was the revision last modified.          | **Yes**      |
-| `revisionFirstPublishedOn` | When was the revision first published.        | No           |
-| `revisionLastPublishedOn`  | When was the revision last published.         | No           |
-| `revisionCreatedBy`        | Identity that initially created the revision. | No           |
-| `revisionSavedBy`          | Identity that last saved the revision.        | No           |
-| `revisionModifiedBy`       | Identity that last modified the revision.     | **Yes**      |
-| `revisionFirstPublishedBy` | Identity that first published the revision.   | No           |
-| `revisionLastPublishedBy`  | Identity that last published the revision.    | No           |
-
-**Entry-level Meta Fields**
-
-| Field                      | Description                                   | May be empty |
-| -------------------------- | --------------------------------------------- | ------------ |
-| `entryCreatedOn`        | When was the entry initially created.      | No           |
-| `entrySavedOn`          | When was the entry last saved.             | No           |
-| `entryModifiedOn`       | When was the entry last modified.          | **Yes**      |
-| `entryFirstPublishedOn` | When was the entry first published.        | No           |
-| `entryLastPublishedOn`  | When was the entry last published.         | No           |
-| `entryCreatedBy`        | Identity that initially created the entry. | No           |
-| `entrySavedBy`          | Identity that last saved the entry.        | No           |
-| `entryModifiedBy`       | Identity that last modified the entry.     | **Yes**      |
-| `entryFirstPublishedBy` | Identity that first published the entry.   | No           |
-| `entryLastPublishedBy`  | Identity that last published the entry.    | No           |
-
-With these new meta fields, users can now easily display the date/time when an entry was initially created, or when it was last modified. They can also easily search for entries and sort them based on the date/time or identity-related meta fields.
-
-For example, if a user wanted to display the date/time when an entry was initially created, they can now simply use the `entryCreatedOn` meta field. And if they wanted to display the identity of the user who last modified an entry, they can now simply use the `entryModifiedBy` meta field.
 
 ### Migrations STATUS FILDS / OVERRIDES
 
