fix: add missing import

--- a/docs/developer-docs/5.33.x/admin-area/extending/custom-dashboard.mdx
+++ b/docs/developer-docs/5.33.x/admin-area/extending/custom-dashboard.mdx
@@ -25,7 +25,7 @@ To replace the dashboard, go to `apps/admin/src/App.tsx` in your Webiny project,
 
 ```diff-tsx apps/admin/src/App.tsx
 import React from "react";
-+ import { Admin, Dashboard, createComponentPlugin } from "@webiny/app-serverless-cms";
++ import { Admin, Dashboard, createComponentPlugin, useSecurity } from "@webiny/app-serverless-cms";
 import { Cognito } from "@webiny/app-admin-users-cognito";
 import "./App.scss";
 
