Company handbook wip

--- a/docs/handbook/company/why-webiny-exists.mdx
+++ b/docs/handbook/company/why-webiny-exists.mdx
@@ -15,18 +15,18 @@ Giving enterprises the means to take back control over their online experiences.
 
 ### Open-source as a foundation
 
-We believe that open-source is the best way to build software. It allows us to build a better product, faster, and with the help of the community. It also allows us to build a product that is more secure, and more reliable.
+We believe that open-source is the best way to build software, and in the future, it will be the only way that we'll build software. It allows us to build a better product, faster, and with the help of the community. It also allows us to build a product that is more secure, and more reliable.
 
 Open-source for us doesn't just mean a permissive license, but also a transparent development process. We want to build a product that is developed in the open, and that's why we're building Webiny in public.
 
 By rooting our values around open source we give the developers back that sense of freedom to customize and use the product the way they want.
 
 
-### Developer experience as a priority
+### Developer experience as a priority / Ultra-customizable
 
 We believe that developer experience is the most important aspect of any software product. We want to build a product that developers love to use, and that's why we're building Webiny with developers in mind.
 
-It's one thing to have an open-source license, and another thing actually architecting your product with open-source values in mind. Integration, customization and interoperability are all dependent on having a great developer experience. 
+It's one thing to have an open-source license and another thing to architect your product with open-source values in mind. Integration, customization and interoperability are all dependent on having a great developer experience and a product that can be molded to fit their needs.
 
 When we build any new feature at Webiny, we don't think about the feature as just a thing that needs to do a specific task, instead, we put great effort into also thinking about how someone might want to change the default behavior and build customizations on top of it, and then we build the required API so all of that becomes possible.
 
@@ -44,3 +44,4 @@ We differentiate by understanding the value of customer's data. SaaS vendors put
 
 We believe there's a big difference between the two and that our customers are the ones who are best equipped to manage their data most responsibly. One can only care for their own with the detail and precision that it requires. 
 
+Many of the SaaS solutions on the market are anti-freedom. They lock you in, they make it easy to check in, but you can't check out. They don't provide you with ways to export or move your content to another platform. Competition should be on who has a better product, not who can lock you in harder. If all products were forced to make it easy for you to migrate away from their platform, they would be forced to build a better product. With Webiny, you have direct access to all of your data. We want to compete on the quality of our product, not by locking you in. Our goal is to liberate your data from the dictators of the SaaS world.
