--- a/docs/release-notes/5.38.3/changelog.mdx
+++ b/docs/release-notes/5.38.3/changelog.mdx
@@ -16,7 +16,7 @@ With this release, the identified issue has been addressed. Users can confidentl
 
 ### Preventing Accidental Closure in Bulk Edit Dialog  ([#3790](https://github.com/webiny/webiny-js/pull/3790))
 
-With this release, we are preventing the user from accidentally closing the “Bulk Edit” dialog by disabling the default behaviour of closing the dialog when clicking on the scrim.
+With this release, we are preventing the user from accidentally closing the “Bulk Edit” dialog by disabling the default behaviour of closing the dialog when clicking on the screen.
 
 ## Deployments
 
@@ -25,3 +25,7 @@ With this release, we are preventing the user from accidentally closing the “B
 Previously, if a user already had Pulumi CLI installed on their machine, and then tried to deploy their Webiny project, in some cases the deployment would fail. Essentially, the issue was that the globally installed Pulumi CLI would conflict with the one that is installed locally in the project.
 
 This has been fixed. Now, if a user has Pulumi CLI installed globally, it will not cause any issues when deploying your Webiny project.
+
+### Project Creation - Updated Minimum Required Version of Yarn ([#3796](https://github.com/webiny/webiny-js/pull/3796))
+
+We have updated the minimum required version of Yarn to `1.22.21`. This is to ensure that users do not experience any issues when creating a new Webiny project.
