feat: add "min yarn version" item

--- a/docs/release-notes/5.38.3/changelog.mdx
+++ b/docs/release-notes/5.38.3/changelog.mdx
@@ -26,6 +26,10 @@ Previously, if a user already had Pulumi CLI installed on their machine, and the
 
 This has been fixed. Now, if a user has Pulumi CLI installed globally, it will not cause any issues when deploying your Webiny project.
 
-### Project Creation - Updated Minimum Required Version of Yarn ([#3796](https://github.com/webiny/webiny-js/pull/3796))
+### Project Creation - Updated Minimum Required Versions ([#3796](https://github.com/webiny/webiny-js/pull/3796))
 
-We have updated the minimum required version of Yarn to `1.22.21`. This is to ensure that users do not experience any issues when creating a new Webiny project.
+We have updated the minimum required versions of the following dependencies Webiny relies on:
+
+- Node.js: 16.0.0
+- NPM: 10.0.0
+- Yarn: 1.22.21
