fix: remove {version} from a link to release notes

--- a/docs/developer-docs/5.38.x/headless-cms/basics/migrating-to-webiny.mdx
+++ b/docs/developer-docs/5.38.x/headless-cms/basics/migrating-to-webiny.mdx
@@ -60,7 +60,7 @@ Rich text content is typically the most complex content to migrate. This is beca
 #### Migrate assets (images, videos, etc.)
 
 Migrating assets is a multi-step process and it usually requires a separate script that handles the programmatic upload of files via the provided SKD. The process is described in a [dedicated article](/docs/{version}/file-manager/integrations/programmatic-file-upload).
-By default when you upload an asset into Webiny its URL might change, which means any content that was referencing that asset will have a broken link. To avoid this state and to ensure that the URL of the asset stays the same, Webiny supports a mechanism of [file aliases](/docs/{version}/release-notes/5.35.0/changelog#support-file-aliases-3096). An alias allows you to keep the URL the same as it was in the original system making the migration a lot easier. This will solve the problem of content that references files via the URL, which usually entails files inserted inside rich text fields. 
+By default when you upload an asset into Webiny its URL might change, which means any content that was referencing that asset will have a broken link. To avoid this state and to ensure that the URL of the asset stays the same, Webiny supports a mechanism of [file aliases](/docs/release-notes/5.35.0/changelog#support-file-aliases-3096). An alias allows you to keep the URL the same as it was in the original system making the migration a lot easier. This will solve the problem of content that references files via the URL, which usually entails files inserted inside rich text fields. 
 
 Webiny does support a more advanced mechanism of migrating assets by bringing your own 3rd party DAM solution that replaces the built-in File Manager. This option is best discussed on a call with our team, so if you're interested in this option, [please reach out](/forms/product-demo).
 
