wip: create upgrade guide (meta fields)

--- a/docs/release-notes/5.39.0/changelog.mdx
+++ b/docs/release-notes/5.39.0/changelog.mdx
@@ -8,9 +8,9 @@ import { GithubRelease } from "@/components/GithubRelease";
 
 <GithubRelease version={"5.39.0"} />
 
-## Headless CMS
+## Breaking Changes
 
-### Revamped Date/Time and Identity (On/By) Meta Fields
+### Headless CMS - Revamped Date/Time and Identity (On/By) Meta Fields
 
 With Webiny's Headless CMS, created content entries include the following date/time and identity-related meta fields:
 
@@ -27,19 +27,80 @@ And while these meta fields are useful, the main issue our users have been facin
 
 On top of that, searching for entries and sorting based on the date/time or identity-related meta fields was also not possible. Because, again, these meta fields are revision-specific, and not entry-specific.
 
-In order to tackle these issues, with this release, we're revamping the date/time and identity-related meta fields. In total, we're introducing 20 new meta fields, where 10 are revision-specific, and 10 are entry-specific.
+<Alert type={"info"}>
 
-For example, users can now use the `revisionCreatedOn` meta field to display the date/time when a revision was initially created. And they can use the `entryCreatedOn` meta field to display the date/time when an entry was initially created.
+  Content entries created with Webiny's Headless CMS are versioned. In other words, they consist of one or more revisions. For more info, check out the related [user guides](/docs/user-guides/headless-cms/essentials/glossary).
+
+</Alert>
+
+In order to tackle these issues, with this release, we're revamping the date/time and identity-related meta fields. Essentially, we're creating two groups of meta fields: revision-specific and entry-specific. 
+
+Revision-specific fields contain the `revision` prefix in their name, and, as the name suggests, they contain revision-level information. For example, the `revisionCreatedOn` meta field contains the date/time when a revision of a content entry was created.
+
+On the other hand, entry-specific fields do not contain any prefix, and contain entry-level information. For example, the `createdOn` meta field contains the date/time when an entry was initially created. The value of this field will not change even if the entry is updated or new revisions are created.
+
+[//]: # ()
+[//]: # (| Field                      | Description                                                                           |)
+
+[//]: # (| -------------------------- | ------------------------------------------------------------------------------------- |)
+
+[//]: # (| `createdOn`                | The date/time when an entry revision was created.                                     |)
+
+[//]: # (| `modifiedOn`               | NEW The date/time when an entry revision was created.                                 |)
+
+[//]: # (| `savedOn`                  | The date/time when an entry revision was last saved.                                  |)
+
+[//]: # (| `publishedOn`              | DELETED The date/time when an entry revision was published.                           |)
+
+[//]: # (| `firstPublishedOn`         | NEW The identity of the user who last modified an entry revision.                     |)
+
+[//]: # (| `lastPublishedOn`          | NEW The identity of the user who last modified an entry revision.                     |)
+
+[//]: # (| `createdBy`                | The identity of the user who created an entry revision.                               |)
+
+[//]: # (| `ownedBy`                  | DELETED The identity of the user who owns the entry &#40;who created the first revision&#41;. |)
+
+[//]: # (| `modifiedBy`               | The identity of the user who last modified an entry revision.                         |)
+
+[//]: # (| `firstPublishedBy`         | NEW The identity of the user who last modified an entry revision.                     |)
+
+[//]: # (| `lastPublishedBy`          | NEW The identity of the user who last modified an entry revision.                     |)
+
+[//]: # (| `revisionCreatedOn`        | The date/time when an entry revision was created.                                     |)
+
+[//]: # (| `revisionModifiedOn`       | NEW The date/time when an entry revision was created.                                 |)
+
+[//]: # (| `revisionSavedOn`          | The date/time when an entry revision was last saved.                                  |)
+
+[//]: # (| `revisionFirstPublishedOn` | NEW The identity of the user who last modified an entry revision.                     |)
+
+[//]: # (| `revisionLastPublishedOn`  | NEW The identity of the user who last modified an entry revision.                     |)
+
+[//]: # (| `revisionCreatedBy`        | The identity of the user who created an entry revision.                               |)
+
+[//]: # (| `revisionModifiedBy`       | The identity of the user who last modified an entry revision.                         |)
+
+[//]: # (| `revisionSavedBy`          | The identity of the user who last modified an entry revision.                         |)
+
+[//]: # (| `revisionFirstPublishedBy` | NEW The identity of the user who last modified an entry revision.                     |)
+
+[//]: # (| `revisionLastPublishedBy`  | NEW The identity of the user who last modified an entry revision.                     |)
+
+[//]: # ()
+[//]: # (In total, we're introducing 20 new meta fields, where 10 are revision-specific, and 10 are entry-specific.)
+
+[//]: # ()
+[//]: # (For example, users can now use the `revisionCreatedOn` meta field to display the date/time when a revision was initially created. And they can use the `entryCreatedOn` meta field to display the date/time when an entry was initially created.)
 
 For the full list of new meta fields and additional information, please refer to the new [Meta Fields](/docs/tutorials/headless-cms/meta-fields) article.
 
 #### A Note On Backwards Compatibility
 
-Because we're introducing new meta fields, we're also deprecating the old ones. This means that, with this release, the old meta fields will still work, but they will be removed in one of the future releases. For more information, please refer to the dedicated [Backwards Compatibility](/docs/tutorials/headless-cms/meta-fields#backwards-compatibility) section in the new Meta Fields article.
+In order to introduce these improvements, we also had to introduce a couple of breaking changes. For example, because they're no longer needed, we've removed the `publishedOn` and `ownedBy` content entry fields. So, if you're using these fields in your project, you'll need to update your code accordingly.
 
+Also, note that this release includes a data migration that will automatically migrate all existing content entries to use the new meta fields. The migration is run automatically after the **API** project application is deployed.
 
-
-### Migrations STATUS FILDS / OVERRIDES
+For more information on all of these topics, be sure to check out the [Upgrade Guide](/docs/release-notes/5.39.0/upgrade-guide) section and, more importantly, the [Date/Time and Identity (On/By) Meta Fields](/docs/release-notes/5.39.0/date-time-and-id-meta-fields) article.
 
 ## Deployments
 
@@ -106,3 +167,4 @@ This way, it's a bit easier to open the Admin or Website app. Users no longer ne
 Note that, for local development, the apps are still spun up locally in the same way - via the [`webiny watch`](/docs/core-development-concepts/basics/watch-command) command.
 
 </Alert>
+
