--- a/docs/release-notes/5.39.0/upgrade-guide.mdx
+++ b/docs/release-notes/5.39.0/upgrade-guide.mdx
@@ -1,7 +1,7 @@
 ---
-id: 268cc9e7
+id: bad5c115
 title: Upgrade from 5.38.x to 5.39.0
-description: Learn how to upgrade Webiny from 5.38.x to 5.39.0.
+description: Learn how to upgrade Webiny from 5.37.x to 5.39.0.
 ---
 
 import { Alert } from "@/components/Alert";
@@ -9,7 +9,7 @@ import { AdditionalNotes } from "@/components/upgrade/AdditionalNotes";
 
 <Alert type="success" title="What you’ll learn">
 
-- how to upgrade Webiny from 5.38.x to 5.39.0
+- how to upgrade Webiny from 5.37.x to 5.38.x
 
 </Alert>
 
@@ -32,7 +32,28 @@ yarn up "@webiny/*@5.39.0"
 
 Once the upgrade has finished, running the `yarn webiny --version` command in your terminal should return **5.39.0**.
 
-### 2. Deploy Your Project
+### 2. Run the Upgrade Command
+
+The next step is to run the project upgrade:
+
+```bash
+yarn webiny upgrade
+```
+
+### 3. Handling Breaking Changes
+
+#### 3.1 Date/Time and Identity (On/By) Meta Fields
+
+As mentioned in the [changelog](docs/release-notes/5.39.0/changelog#headless-cms-revamped-date-time-and-identity-on-by-meta-fields), with this release, we’ve revamped the date/time and identity-related meta fields. In order to do this, we had to introduce a couple of Headless CMS-related breaking changes.
+
+Will these breaking changes affect you? It depends on if you've been adding custom code in your project, in which you are also relying on the existing content entry meta fields, like `ownedBy`, `publishedOn`, or `createdOn`. For example, you may have have been using these in your: 
+
+1. custom Headless CMS-related GraphQL API queries or mutations
+2. custom Headless CMS-related JavaScript (TypeScript) code (for example, [lifecycle events](/docs/headless-cms/references/lifecycle-events))
+
+If you don't have any of the above, you can safely skip this section. Otherwise, please take a look at the [Date/Time and Identity (On/By) Meta Fields](/docs/release-notes/5.39.0/date-time-and-id-meta-fields) article.
+
+### 4. Deploy Your Project
 
 Proceed by redeploying your Webiny project:
 
